# VectorSynth

./: CMakeLists.txt  README.md
alive_util/: known_fns.cpp  known_fns.h  llvm2alive.cpp  utils.cpp  utils.h
cmake/: FindAlive2.cmake
lib/: constantsynth.cpp  ir.cpp  ir.h  known_fns.cpp  llvm2alive.cpp  llvm2alive.h  pass.cpp  simd.cpp  simd.h  synthesizer.cpp  synthesizer.h  utils.cpp
pass/: CMakeLists.txt  pass.cpp
tools/: alive-cs.cpp
